--- a/index.html
+++ b/index.html
@@ -884,6 +884,13 @@
     <p class="product-price">200€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
+     <div class="product-card">
+    <div class="product-image"><img src="images/BBRivales.png" alt="Booster Box Rivales " onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🌑</div>';">
+      </div>
+      <h3 class="product-name">Booster Box Rivales Español</h3>
+    <p class="product-price">200€</p>
+    <span class="product-status status-available">Disponible</span>
+     </div>
     </div>
    </div><!-- Página Cajas de Sobres -->
         <div id="boxes" class="page overlay">
