--- a/index.html
+++ b/index.html
@@ -877,6 +877,13 @@
     <p class="product-price">60€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
+      <div class="product-card">
+    <div class="product-image"><img src="images/mascarada.png" alt="Pokemon ETB Mascarada Crepuscular" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🌑</div>';">
+      </div>
+      <h3 class="product-name">Pokemon ETB Mascarada Crespuscular Español</h3>
+    <p class="product-price">65€</p>
+    <span class="product-status status-available">Disponible</span>
+     </div>
     </div>
    </div><!-- Página Cajas de Sobres -->
         <div id="boxes" class="page overlay">
