--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
     <div class="product-image"><img src="images/pokemon_etb_zenit_supremo.png" alt="Pokemon ETB Zenit Supremo" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>👑</div>';">
       </div>
       <h3 class="product-name">Pokemon ETB Zenit Supremo Español</h3>
-    <p class="product-price">115€</p>
+    <p class="product-price">135€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
      <div class="product-card">
@@ -840,7 +840,7 @@
       </div>
       <h3 class="product-name">Pokemon ETB Tempestad Plateada Español</h3>
     <p class="product-price">70€</p>
-    <span class="product-status status-available">Disponible</span>
+    <span class="product-status status-available">No Disponible</span>
      </div>
      <div class="product-card">
     <div class="product-image"><img src="images/etb_mega_evoluciones_garde.png" alt="ETB Mega Evoluciones" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🔥</div>';">
@@ -867,7 +867,7 @@
     <div class="product-image"><img src="images/etb_mega_evoluciones.png" alt="ETB Mega Evoluciones Lucario" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🥊</div>';">
       </div>
       <h3 class="product-name">ETB Mega Evoluciones Lucario Español</h3>
-    <p class="product-price">60€</p>
+    <p class="product-price">65€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
      <div class="product-card">
@@ -875,7 +875,7 @@
       </div>
       <h3 class="product-name">Pokemon ETB Fulgor Negro Español</h3>
     <p class="product-price">60€</p>
-    <span class="product-status status-available">Disponible</span>
+    <span class="product-status status-available">No Disponible</span>
      </div>
       <div class="product-card">
     <div class="product-image"><img src="images/mascarada.png" alt="Pokemon ETB Mascarada Crepuscular" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🌑</div>';">
@@ -932,14 +932,14 @@
     <div class="product-image"><img src="images/Destinos_de_Paldea_Premium_Collection.png" alt="Destinos de Paldea Premium Collection" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>👑</div>';">
       </div>
       <h3 class="product-name">Destinos de Paldea Premium Collection</h3>
-    <p class="product-price">65€</p>
+    <p class="product-price">72€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
      <div class="product-card">
     <div class="product-image"><img src="images/Lillie_Premium_Tournament_Collection_Ingles.png" alt="Lillie Premium Tournament Collection - Inglés" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🎨</div>';">
       </div>
       <h3 class="product-name">Lillie Premium Tournament Collection Inglés</h3>
-    <p class="product-price">50€</p>
+    <p class="product-price">55€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
      <div class="product-card">
@@ -960,22 +960,22 @@
     <div class="product-image"><img src="images/Caja_Morpeko_V_Union_Premium Playmat_Español.png" alt="Caja Morpeko V Union Premium Playmat - Español" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>👑</div>';">
       </div>
       <h3 class="product-name">Caja Morpeko V Union Premium Playmat Español</h3>
-    <p class="product-price">50€</p>
+    <p class="product-price">55€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
      <div class="product-card">
     <div class="product-image"><img src="images/UPC_Prismatic_Evolution_Español.png" alt=" UPC Prismatic Evolution Español" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🏆</div>';">
       </div>
       <h3 class="product-name">UPC Prismatic Evolution Español</h3>
-    <p class="product-price">140€</p>
+    <p class="product-price">170€</p>
     <span class="product-status status-available">Disponible</span>
      </div>
      <div class="product-card">
     <div class="product-image"><img src="images/UPC_Fuegos_Fantasmales_Español.png" alt="UPC Fuegos Fantasmales Español" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>✨</div>';">
       </div>
       <h3 class="product-name">UPC Fuegos Fantasmales Español</h3>
-    <p class="product-price">200€</p>
-    <span class="product-status status-preorder">Stock disponible próximamente</span>
+    <p class="product-price">175</p>
+    <span class="product-status status-preorder"> Disponible </span>
      </div>
     </div>
    </div><!-- Página Latas y Packs Especiales -->
@@ -995,7 +995,7 @@
              <div class="product-card">
                 <div class="product-image"><img src="images/Latas_Cenit_Supremo – Galar Moltres, Articuno y Zapdos.png" alt="Latas Cenit Supremo – Galar Moltres, Articuno y Zapdos" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>🥫</div>';"></div>
                 <h3 class="product-name">Latas Cenit Supremo – Galar Moltres, Articuno y Zapdos Español</h3>
-                <p class="product-price">50€</p>
+                <p class="product-price">55€</p>
                 <span class="product-status status-available">Disponible</span>
              </div>
              <div class="product-card">
