--- a/index.html
+++ b/index.html
@@ -977,6 +977,20 @@
     <p class="product-price">175</p>
     <span class="product-status status-preorder"> Disponible </span>
      </div>
+     <div class="product-card">
+    <div class="product-image"><img src="images/151_Alakazam_box_en.png" alt="Alakazam 151 Box" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>✨</div>';">
+      </div>
+      <h3 class="product-name">Alakazam 151 Box</h3>
+    <p class="product-price">95</p>
+    <span class="product-status status-preorder"> Disponible </span>
+     </div>
+     <div class="product-card">
+    <div class="product-image"><img src="images/Latias_ex_box_en.png" alt=" Mega Latias EX Box" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'fallback-icon\'>✨</div>';">
+      </div>
+      <h3 class="product-name">Mega Latias EX Box</h3>
+    <p class="product-price">40</p>
+    <span class="product-status status-preorder"> Disponible </span>
+     </div>
     </div>
    </div><!-- Página Latas y Packs Especiales -->
         <!-- Nueva sección: Latas -->
